--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
 </head>
 <body>
     <header>
-        <h1>Dr. Mostafa Sheikhalishahi</h1>
-        <p>Artificial Intelligence Researcher</p>
-        <p>Email: <a href="mailto:mostafa.alishahi@gmail.com">mostafa.alishahi@gmail.com</a></p>
-        <p>Location: Augsburg, Germany</p>
+        <div class="hero">
+            <h1>Dr. Mostafa Sheikhalishahi</h1>
+            <p>Artificial Intelligence Researcher</p>
+            <p>Email: <a href="mailto:mostafa.alishahi@gmail.com">mostafa.alishahi@gmail.com</a></p>
+            <p>Location: Augsburg, Germany</p>
+        </div>
     </header>
+
+    <nav>
+        <ul>
+            <li><a href="#work-experience">Work Experience</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#honors-awards">Honors & Awards</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#languages">Languages</a></li>
+        </ul>
+    </nav>
 
     <section id="work-experience">
         <h2>Work Experience</h2>
