--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Mostafa Sheikhalishahi - CV</title>
+    <title>Dr. Mostafa Sheikhalishahi - AI Researcher</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,97 +11,75 @@
         <div class="hero">
             <h1>Dr. Mostafa Sheikhalishahi</h1>
             <p>Artificial Intelligence Researcher</p>
-            <p>Email: <a href="mailto:mostafa.alishahi@gmail.com">mostafa.alishahi@gmail.com</a></p>
-            <p>Location: Augsburg, Germany</p>
+            <a href="#contact" class="btn-primary">Get in Touch</a>
         </div>
     </header>
 
     <nav>
         <ul>
-            <li><a href="#work-experience">Work Experience</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#honors-awards">Honors & Awards</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#languages">Languages</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
-    <section id="work-experience">
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I am an AI researcher with a focus on applying advanced machine learning techniques to healthcare. With extensive experience in federated learning and explainable AI, I am passionate about leveraging technology to improve patient care and healthcare systems.</p>
+    </section>
+
+    <section id="work">
         <h2>Work Experience</h2>
-        <div class="job">
+        <div class="card">
             <h3>Post-Doc Researcher</h3>
             <p><strong>Institute for Digital Medicine (IDM), Augsburg University Hospital</strong></p>
             <p><strong>12/2021 - Present</strong> | Augsburg, Germany</p>
-            <ul>
-                <li>Developing the SAFICU project, focusing on federated learning in ICUs.</li>
-                <li>Conducting research on federated learning and explainable AI.</li>
-                <li>Supervising M.Sc. and B.Sc. students.</li>
-                <li>Publishing and presenting research findings.</li>
-            </ul>
+            <p>Developing innovative AI models to enhance ICU patient care through federated learning techniques. Leading research on explainable AI and privacy-preserving healthcare solutions.</p>
         </div>
-        <div class="job">
+        <div class="card">
             <h3>Ph.D. Research Fellow</h3>
-            <p><strong>Digital Health and Wellbeing Unit, Fondazione Bruno Kessler (FBK)</strong></p>
+            <p><strong>Fondazione Bruno Kessler (FBK)</strong></p>
             <p><strong>11/2017 - 07/2021</strong> | Trento, Italy</p>
-            <ul>
-                <li>Analyzed ICU's electronic health records using machine learning.</li>
-                <li>Implemented algorithms for anomaly detection in wastewater treatment.</li>
-                <li>Published in top-tier journals on AI and healthcare.</li>
-            </ul>
+            <p>Conducted research on machine learning algorithms to analyze ICU electronic health records and improve patient outcomes. Developed anomaly detection systems for environmental monitoring.</p>
         </div>
     </section>
 
-    <section id="education">
-        <h2>Education</h2>
-        <div class="education-item">
-            <h3>Ph.D. in Computer Science</h3>
-            <p><strong>University of Trento</strong></p>
-            <p><strong>11/2017 - 05/2022</strong> | Trento, Italy</p>
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project">
+            <h3>SAFICU Project</h3>
+            <p>An initiative to apply federated learning techniques to enhance ICU patient care, ensuring data privacy and improving predictive analytics.</p>
         </div>
-        <div class="education-item">
-            <h3>MSc in Computer Science</h3>
-            <p><strong>University of Calabria</strong></p>
-            <p><strong>09/2014 - 06/2017</strong> | Calabria, Italy</p>
+        <div class="project">
+            <h3>Clinical Care Datathon</h3>
+            <p>Award-winning project focused on leveraging AI to address challenges in clinical care, recognized for its innovative approach and impact.</p>
         </div>
-        <div class="education-item">
-            <h3>BSc in Computer Science</h3>
-            <p><strong>University of Yazd</strong></p>
-            <p><strong>11/2007 - 11/2011</strong> | Yazd, Iran</p>
-        </div>
-    </section>
-
-    <section id="honors-awards">
-        <h2>Honors & Awards</h2>
-        <ul>
-            <li>Genetic Engineering Attribution Challenge, 2020 - Ranked 14th out of 1211 competitors.</li>
-            <li>Clinical Care Datathon, Milan, 2019 - Awarded first prize, sponsored by Google.</li>
-            <li>Postgraduate Scholarship, University of Trento, 2017 - Full scholarship for Ph.D.</li>
-            <li>Postgraduate Scholarship, University of Calabria, 2014 - Full scholarship for MSc.</li>
-        </ul>
     </section>
 
     <section id="skills">
         <h2>Skills</h2>
-        <h3>Programming Languages & Tools</h3>
-        <p>Python, Pandas, Polars, Numpy, Scipy, PySpark, Scikit-learn, Matplotlib, Seaborn, Bash</p>
-        <h3>Databases</h3>
-        <p>PostgreSQL, Qdrant, Elasticsearch</p>
-        <h3>Machine Learning & AI</h3>
-        <p>Keras, Pytorch, Captum (Explainable AI), Flower (Federated Learning), Time-series Analysis</p>
-        <h3>Large Language Models & Generative AI</h3>
-        <p>OpenAI API, Llama3, LlamaIndex</p>
-        <h3>DevOps</h3>
-        <p>Kubernetes, Docker, GitHub, MLflow, Weights & Biases, Prefect, Grafana</p>
-        <h3>Cloud Services</h3>
-        <p>AWS Sagemaker, AWS S3, AWS Glue, AWS Step Functions, AWS Lambda</p>
+        <div class="skill-set">
+            <div class="skill">
+                <h3>Programming</h3>
+                <p>Python, Pandas, Numpy, Scipy, PySpark, Scikit-learn</p>
+            </div>
+            <div class="skill">
+                <h3>Machine Learning</h3>
+                <p>Keras, Pytorch, Captum (Explainable AI), Flower (Federated Learning)</p>
+            </div>
+            <div class="skill">
+                <h3>Databases & Tools</h3>
+                <p>PostgreSQL, Elasticsearch, AWS Sagemaker, Docker, Kubernetes</p>
+            </div>
+        </div>
     </section>
 
-    <section id="languages">
-        <h2>Languages</h2>
-        <p>English (Fluent)</p>
-        <p>Persian (Native)</p>
-        <p>Italian (Fluent)</p>
-        <p>German (Beginner)</p>
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:mostafa.alishahi@gmail.com">mostafa.alishahi@gmail.com</a></p>
+        <p>Location: Augsburg, Germany</p>
     </section>
 
     <footer>
