--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Mostafa Sheikhalishahi - AI Researcher</title>
+    <title>Mostafa Sheikhalishahi - AI Researcher</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="hero">
-            <h1>Dr. Mostafa Sheikhalishahi</h1>
-            <p>Artificial Intelligence Researcher</p>
+            <h1>Mostafa Sheikhalishahi, PhD</h1>
+            <p>Data Scientist and Artificial Intelligence Researcher with expertise in federated learning and explainable AI.</p>
             <a href="#contact" class="btn-primary">Get in Touch</a>
         </div>
     </header>
@@ -27,7 +27,8 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>I am an AI researcher with a focus on applying advanced machine learning techniques to healthcare. With extensive experience in federated learning and explainable AI, I am passionate about leveraging technology to improve patient care and healthcare systems.</p>
+        <p>I am a dedicated Artificial Intelligence researcher with a robust background in applying cutting-edge machine learning techniques to healthcare. My work primarily focuses on leveraging federated learning and explainable AI to enhance patient care and healthcare systems. With extensive experience in both research and practical applications, I am committed to advancing technology that can provide tangible benefits in medical settings.</p>
+        <p>My career has been characterized by a blend of rigorous academic research and real-world problem-solving. I hold a Ph.D. in Computer Science, during which I concentrated on the intersection of AI and healthcare. I am passionate about developing technologies that not only push the boundaries of what AI can achieve but also address critical issues such as data privacy and interpretability.</p>
     </section>
 
     <section id="work">
@@ -36,13 +37,26 @@
             <h3>Post-Doc Researcher</h3>
             <p><strong>Institute for Digital Medicine (IDM), Augsburg University Hospital</strong></p>
             <p><strong>12/2021 - Present</strong> | Augsburg, Germany</p>
-            <p>Developing innovative AI models to enhance ICU patient care through federated learning techniques. Leading research on explainable AI and privacy-preserving healthcare solutions.</p>
+            <p>At IDM, I lead the SAFICU project, which aims to revolutionize patient care in Intensive Care Units (ICUs) by applying federated learning techniques. This project involves developing AI models that can work across multiple institutions while preserving patient privacy. My role includes conducting advanced research on federated learning and explainable AI, mentoring students, and contributing to high-impact publications and international conferences.</p>
+            <p>Key responsibilities include:</p>
+            <ul>
+                <li>Designing and implementing federated learning frameworks for real-time ICU monitoring.</li>
+                <li>Developing models that balance interpretability and accuracy to assist healthcare professionals.</li>
+                <li>Overseeing the research progress of M.Sc. and B.Sc. students, guiding them through their projects.</li>
+                <li>Publishing findings in leading journals and presenting at global conferences to share insights and advancements.</li>
+            </ul>
         </div>
         <div class="card">
             <h3>Ph.D. Research Fellow</h3>
-            <p><strong>Fondazione Bruno Kessler (FBK)</strong></p>
+            <p><strong>Digital Health and Wellbeing Unit, Fondazione Bruno Kessler (FBK)</strong></p>
             <p><strong>11/2017 - 07/2021</strong> | Trento, Italy</p>
-            <p>Conducted research on machine learning algorithms to analyze ICU electronic health records and improve patient outcomes. Developed anomaly detection systems for environmental monitoring.</p>
+            <p>During my tenure at FBK, I focused on harnessing machine learning to improve clinical outcomes through data-driven insights. My work involved analyzing electronic health records from ICUs to predict patient conditions and detect anomalies. I also developed algorithms for environmental monitoring in wastewater treatment, showcasing the versatility of machine learning techniques across different domains.</p>
+            <p>Key accomplishments include:</p>
+            <ul>
+                <li>Developing predictive models for ICU patient outcomes, enhancing decision-making and patient care.</li>
+                <li>Creating algorithms for detecting anomalies in wastewater treatment processes, contributing to environmental health.</li>
+                <li>Publishing influential papers in top-tier AI and healthcare journals and presenting research at prominent conferences.</li>
+            </ul>
         </div>
     </section>
 
@@ -50,11 +64,23 @@
         <h2>Projects</h2>
         <div class="project">
             <h3>SAFICU Project</h3>
-            <p>An initiative to apply federated learning techniques to enhance ICU patient care, ensuring data privacy and improving predictive analytics.</p>
+            <p>The SAFICU project is an innovative research initiative aimed at applying federated learning to improve patient care in ICUs. This project involves developing a collaborative learning system that enables multiple hospitals to train models on their data without sharing it directly. The goal is to enhance predictive accuracy and support better clinical decisions while ensuring data privacy.</p>
+            <p>Achievements of the SAFICU project:</p>
+            <ul>
+                <li>Implemented a federated learning framework that respects data privacy regulations.</li>
+                <li>Improved patient monitoring and outcome prediction through collaborative model training.</li>
+                <li>Facilitated cross-institutional research collaborations, leading to richer and more diverse datasets.</li>
+            </ul>
         </div>
         <div class="project">
             <h3>Clinical Care Datathon</h3>
-            <p>Award-winning project focused on leveraging AI to address challenges in clinical care, recognized for its innovative approach and impact.</p>
+            <p>In 2019, I participated in the Clinical Care Datathon in Milan, where I led a team to develop an AI solution that addressed critical issues in clinical care. Our project won first prize, sponsored by Google, for its innovative approach to using AI to optimize patient care processes and outcomes.</p>
+            <p>Project highlights include:</p>
+            <ul>
+                <li>Developed an AI-based solution that leveraged machine learning to streamline clinical workflows.</li>
+                <li>Presented our findings and technology at the datathon, receiving recognition for its impact on clinical care.</li>
+                <li>Applied advanced AI techniques to real-world problems, demonstrating practical applications of our research.</li>
+            </ul>
         </div>
     </section>
 
@@ -63,27 +89,28 @@
         <div class="skill-set">
             <div class="skill">
                 <h3>Programming</h3>
-                <p>Python, Pandas, Numpy, Scipy, PySpark, Scikit-learn</p>
+                <p>Proficient in Python and its libraries, including Pandas, Numpy, Scipy, and PySpark. Experienced with data manipulation, analysis, and visualization using tools like Scikit-learn, Matplotlib, and Seaborn.</p>
             </div>
             <div class="skill">
-                <h3>Machine Learning</h3>
-                <p>Keras, Pytorch, Captum (Explainable AI), Flower (Federated Learning)</p>
+                <h3>Machine Learning & AI</h3>
+                <p>Expert in machine learning frameworks such as Keras and Pytorch. Skilled in developing and deploying explainable AI models using Captum and federated learning techniques with Flower. Adept at time-series analysis and applying these techniques to real-world problems.</p>
             </div>
             <div class="skill">
                 <h3>Databases & Tools</h3>
-                <p>PostgreSQL, Elasticsearch, AWS Sagemaker, Docker, Kubernetes</p>
+                <p>Experienced with PostgreSQL, Qdrant, and Elasticsearch for database management. Proficient in DevOps tools and practices, including Docker, Kubernetes, GitHub, and MLflow. Familiar with cloud services such as AWS Sagemaker, AWS S3, and AWS Lambda.</p>
             </div>
         </div>
     </section>
 
     <section id="contact">
         <h2>Contact</h2>
+        <p>For any inquiries, collaborations, or to discuss research opportunities, please feel free to reach out to me via email.</p>
         <p>Email: <a href="mailto:mostafa.alishahi@gmail.com">mostafa.alishahi@gmail.com</a></p>
         <p>Location: Augsburg, Germany</p>
     </section>
 
     <footer>
-        <p>&copy; 2024 Dr. Mostafa Sheikhalishahi</p>
+        <p>&copy; 2024 Mostafa Sheikhalishahi</p>
     </footer>
 </body>
 </html>
