--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="hero">
             <h1>Mostafa Sheikhalishahi, PhD</h1>
-            <p>Data Scientist and Artificial Intelligence Researcher with expertise in federated learning and explainable AI.</p>
+            <p>Data Scientist and AI Researcher</p>
             <a href="#contact" class="btn-primary">Get in Touch</a>
         </div>
     </header>
