--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="hero">
-            <h1>Mostafa Sheikhalishahi, PhD</h1>
+            <h1>Mostafa Sheikhalishahi, Ph.D.</h1>
             <p>Data Scientist and AI Researcher</p>
             <a href="#contact" class="btn-primary">Get in Touch</a>
         </div>
