--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.7">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mostafa Sheikhalishahi - AI Researcher</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="hero">
-            <h1>Mostafa Sheikhalishahi, Ph.D.</h1>
-            <p>Data Scientist and AI Researcher</p>
+            <h1>Mostafa Sheikhalishahi</h1>
+            <p>Artificial Intelligence Researcher with expertise in federated learning and explainable AI.</p>
+            <a href="#contact" class="btn-primary">Get in Touch</a>
         </div>
     </header>
 
@@ -36,7 +37,7 @@
             <h3>Post-Doc Researcher</h3>
             <p><strong>Institute for Digital Medicine (IDM), Augsburg University Hospital</strong></p>
             <p><strong>12/2021 - Present</strong> | Augsburg, Germany</p>
-            <p>At IDM, I work on the SAFICU project, which aims to revolutionize patient care in Intensive Care Units (ICUs) by applying federated learning techniques. This project involves developing AI models that can work across multiple institutions while preserving patient privacy. My role includes conducting advanced research on federated learning and explainable AI, mentoring students, and contributing to high-impact publications and international conferences.</p>
+            <p>At IDM, I lead the SAFICU project, which aims to revolutionize patient care in Intensive Care Units (ICUs) by applying federated learning techniques. This project involves developing AI models that can work across multiple institutions while preserving patient privacy. My role includes conducting advanced research on federated learning and explainable AI, mentoring students, and contributing to high-impact publications and international conferences.</p>
             <p>Key responsibilities include:</p>
             <ul>
                 <li>Designing and implementing federated learning frameworks for real-time ICU monitoring.</li>
@@ -62,24 +63,14 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>SAFICU Project</h3>
-            <p>The SAFICU project is an innovative research initiative aimed at applying federated learning to improve patient care in ICUs. This project involves developing a collaborative learning system that enables multiple hospitals to train models on their data without sharing it directly. The goal is to enhance predictive accuracy and support better clinical decisions while ensuring data privacy.</p>
-            <p>Achievements of the SAFICU project:</p>
-            <ul>
-                <li>Implemented a federated learning framework that respects data privacy regulations.</li>
-                <li>Improved patient monitoring and outcome prediction through collaborative model training.</li>
-                <li>Facilitated cross-institutional research collaborations, leading to richer and more diverse datasets.</li>
-            </ul>
+            <h3>Genetic Engineering Attribution Challenge</h3>
+            <p>The objective of this challenge was to predict the laboratory of origin for plasmid DNA sequences. Our proposed model was ranked <strong>14th</strong> on the private leaderboard out of <strong>1211</strong> competitors.</p>
+            <p>For more details, visit our <a href="https://github.com/mostafaalishahi/Genetic_engineering_attribution_challenge_2020" target="_blank"><strong>GitHub repository</strong></a>.</p>
         </div>
         <div class="project">
-            <h3>Clinical Care Datathon</h3>
-            <p>In 2019, I participated in the Clinical Care Datathon in Milan, where I led a team to develop an AI solution that addressed critical issues in clinical care. Our project won first prize, sponsored by Google, for its innovative approach to using AI to optimize patient care processes and outcomes.</p>
-            <p>Project highlights include:</p>
-            <ul>
-                <li>Developed an AI-based solution that leveraged machine learning to streamline clinical workflows.</li>
-                <li>Presented our findings and technology at the datathon, receiving recognition for its impact on clinical care.</li>
-                <li>Applied advanced AI techniques to real-world problems, demonstrating practical applications of our research.</li>
-            </ul>
+            <h3>Milan Critical Care Datathon</h3>
+            <p>The objective was to develop an algorithm to predict the need for blood gas analysis in critically ill patients in the ICU. Our team won <strong>First Prize</strong>, sponsored by Google, among <strong>10</strong> competing teams.</p>
+            <p>Learn more about the datathon from this <a href="https://magazine.fbk.eu/en/news/fbk-trentinosalute4-0-researchers-winners-of-milan-critical-care-unit-datathon-2019/" target="_blank"><strong>news article</strong></a>.</p>
         </div>
     </section>
 
