--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
     <header>
         <div class="hero">
             <h1> Mostafa Sheikhalishahi</h1>
-            <p>Artificial Intelligence Researcher with expertise in federated learning and explainable AI.</p>
-            <a href="#contact" class="btn-primary">Get in Touch</a>
+            <p>Data Scientist and AI Researcher</p>
         </div>
     </header>
 
