--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h3>Post-Doc Researcher</h3>
             <p><strong>Institute for Digital Medicine (IDM), Augsburg University Hospital</strong></p>
             <p><strong>12/2021 - Present</strong> | Augsburg, Germany</p>
-            <p>At IDM, I lead the SAFICU project, which aims to revolutionize patient care in Intensive Care Units (ICUs) by applying federated learning techniques. This project involves developing AI models that can work across multiple institutions while preserving patient privacy. My role includes conducting advanced research on federated learning and explainable AI, mentoring students, and contributing to high-impact publications and international conferences.</p>
+            <p>At IDM, I work on the SAFICU project, which aims to revolutionize patient care in Intensive Care Units (ICUs) by applying federated learning techniques. This project involves developing AI models that can work across multiple institutions while preserving patient privacy. My role includes conducting advanced research on federated learning and explainable AI, mentoring students, and contributing to high-impact publications and international conferences.</p>
             <p>Key responsibilities include:</p>
             <ul>
                 <li>Designing and implementing federated learning frameworks for real-time ICU monitoring.</li>
