--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mostafa Sheikhalishahi - AI Researcher</title>
+    <title>Mostafa Sheikhalishahi - Data Scientist and AI Researcher</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Add some inline styles for enhanced presentation */
@@ -56,7 +56,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>I am a dedicated Artificial Intelligence researcher with a robust background in applying cutting-edge machine learning techniques to healthcare. My work primarily focuses on leveraging federated learning and explainable AI to enhance patient care and healthcare systems. With extensive experience in both research and practical applications, I am committed to advancing technology that can provide tangible benefits in medical settings.</p>
+        <p>I am a dedicated Data Scientist and Artificial Intelligence researcher with a robust background in applying cutting-edge machine learning techniques to healthcare. My work primarily focuses on leveraging federated learning and explainable AI to enhance patient care and healthcare systems. With extensive experience in both research and practical applications, I am committed to advancing technology that can provide tangible benefits in medical settings.</p>
         <p>My career has been characterized by a blend of rigorous academic research and real-world problem-solving. I hold a Ph.D. in Computer Science, during which I concentrated on the intersection of AI and healthcare. I am passionate about developing technologies that not only push the boundaries of what AI can achieve but also address critical issues such as data privacy and interpretability.</p>
     </section>
 
