--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mostafa Sheikhalishahi - Data Scientist and AI Researcher</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* Add some inline styles for enhanced presentation */
         .skills-container {
@@ -34,34 +36,99 @@
             background-color: #e0f7fa;
             border-color: #4db6ac;
         }
+        header {
+            background: url('hero-background.jpg') no-repeat center center/cover;
+            color: #fff;
+            padding: 100px 20px;
+            text-align: center;
+        }
+        .hero h1 {
+            font-size: 3em;
+            margin: 0;
+        }
+        .hero p {
+            font-size: 1.5em;
+        }
+        nav {
+            background-color: #333;
+            color: #fff;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+        }
+        nav ul li {
+            margin: 0 15px;
+        }
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 1.2em;
+        }
+        .card {
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
+        .card h3 {
+            margin-top: 0;
+        }
+        .project {
+            margin-bottom: 20px;
+        }
+        .project h3 {
+            margin-top: 0;
+        }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #333;
+            color: #fff;
+        }
+        .social-icons {
+            font-size: 1.5em;
+            margin: 10px 0;
+        }
+        .social-icons a {
+            color: #333;
+            margin: 0 10px;
+            text-decoration: none;
+        }
+        .social-icons a:hover {
+            color: #007bff;
+        }
     </style>
 </head>
 <body>
     <header>
         <div class="hero">
-            <h1> Mostafa Sheikhalishahi</h1>
+            <h1>Mostafa Sheikhalishahi</h1>
             <p>Data Scientist and AI Researcher</p>
         </div>
     </header>
 
     <nav>
         <ul>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#work">Work</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about"><i class="fas fa-user"></i> About Me</a></li>
+            <li><a href="#work"><i class="fas fa-briefcase"></i> Work</a></li>
+            <li><a href="#projects"><i class="fas fa-project-diagram"></i> Projects</a></li>
+            <li><a href="#skills"><i class="fas fa-cogs"></i> Skills</a></li>
+            <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
         </ul>
     </nav>
 
     <section id="about">
-        <h2>About Me</h2>
+        <h2><i class="fas fa-user"></i> About Me</h2>
         <p>I am a dedicated Data Scientist and Artificial Intelligence researcher with a robust background in applying cutting-edge machine learning techniques to healthcare. My work primarily focuses on leveraging federated learning and explainable AI to enhance patient care and healthcare systems. With extensive experience in both research and practical applications, I am committed to advancing technology that can provide tangible benefits in medical settings.</p>
         <p>My career has been characterized by a blend of rigorous academic research and real-world problem-solving. I hold a Ph.D. in Computer Science, during which I concentrated on the intersection of AI and healthcare. I am passionate about developing technologies that not only push the boundaries of what AI can achieve but also address critical issues such as data privacy and interpretability.</p>
     </section>
 
     <section id="work">
-        <h2>Work Experience</h2>
+        <h2><i class="fas fa-briefcase"></i> Work Experience</h2>
         <div class="card">
             <h3>Post-Doc Researcher</h3>
             <p><strong>Institute for Digital Medicine (IDM), Augsburg University Hospital</strong></p>
@@ -90,7 +157,7 @@
     </section>
 
     <section id="projects">
-        <h2>Projects</h2>
+        <h2><i class="fas fa-project-diagram"></i> Projects</h2>
         <div class="project">
             <h3>Genetic Engineering Attribution Challenge</h3>
             <p>The objective of this challenge was to predict the laboratory of origin for plasmid DNA sequences. Our proposed model was ranked <strong>14th</strong> on the private leaderboard out of <strong>1211</strong> competitors.</p>
@@ -104,59 +171,59 @@
     </section>
 
     <section id="skills">
-        <h2>Skills</h2>
+        <h2><i class="fas fa-cogs"></i> Skills</h2>
         <div class="skills-container">
             <div class="skill-set">
                 <h3>Technical Skills</h3>
                 <div class="skill">
-                    <h4>Programming Languages</h4>
+                    <h4><i class="fas fa-code"></i> Programming Languages</h4>
                     <p>Python, Bash</p>
                 </div>
                 <div class="skill">
-                    <h4>Data Analysis</h4>
+                    <h4><i class="fas fa-database"></i> Data Analysis</h4>
                     <p>Pandas, Polars, Numpy, Scipy</p>
                 </div>
                 <div class="skill">
-                    <h4>Machine Learning & AI</h4>
+                    <h4><i class="fas fa-robot"></i> Machine Learning & AI</h4>
                     <p>Keras, Pytorch, Captum (Explainable AI), Flower (Federated Learning), Time-series Analysis</p>
                 </div>
                 <div class="skill">
-                    <h4>Large Language Models</h4>
+                    <h4><i class="fas fa-brain"></i> Large Language Models</h4>
                     <p>OpenAI API, Llama3, LlamaIndex</p>
                 </div>
                 <div class="skill">
-                    <h4>DevOps & Tools</h4>
+                    <h4><i class="fas fa-tools"></i> DevOps & Tools</h4>
                     <p>Kubernetes, Docker, GitHub, MLflow, Weights & Biases, Prefect, Grafana</p>
                 </div>
                 <div class="skill">
-                    <h4>Cloud Services</h4>
+                    <h4><i class="fas fa-cloud"></i> Cloud Services</h4>
                     <p>AWS Sagemaker, AWS S3, AWS Glue, AWS Step Functions, AWS Lambda</p>
                 </div>
             </div>
             <div class="skill-set">
                 <h3>Soft Skills</h3>
                 <div class="skill">
-                    <h4>Analytical Thinking</h4>
+                    <h4><i class="fas fa-lightbulb"></i> Analytical Thinking</h4>
                     <p>Strong ability to analyze complex problems and develop effective solutions.</p>
                 </div>
                 <div class="skill">
-                    <h4>Creative Problem-Solving</h4>
+                    <h4><i class="fas fa-cogs"></i> Creative Problem-Solving</h4>
                     <p>Proven track record of innovative approaches to research and development challenges.</p>
                 </div>
                 <div class="skill">
-                    <h4>Communication</h4>
+                    <h4><i class="fas fa-comments"></i> Communication</h4>
                     <p>Excellent skills in presenting complex ideas clearly to both technical and non-technical audiences.</p>
                 </div>
                 <div class="skill">
-                    <h4>Team Collaboration</h4>
+                    <h4><i class="fas fa-users"></i> Team Collaboration</h4>
                     <p>Experience working effectively in multidisciplinary teams and mentoring students.</p>
                 </div>
                 <div class="skill">
-                    <h4>Teaching & Mentoring</h4>
+                    <h4><i class="fas fa-chalkboard-teacher"></i> Teaching & Mentoring</h4>
                     <p>Experienced in guiding and supporting students in their research projects.</p>
                 </div>
                 <div class="skill">
-                    <h4>Languages</h4>
+                    <h4><i class="fas fa-language"></i> Languages</h4>
                     <p>English (Fluent), Persian (Native), Italian (Fluent), German (Beginner)</p>
                 </div>
             </div>
@@ -164,10 +231,14 @@
     </section>
 
     <section id="contact">
-        <h2>Contact</h2>
+        <h2><i class="fas fa-envelope"></i> Contact</h2>
         <p>For any inquiries, collaborations, or to discuss research opportunities, please feel free to reach out to me via email.</p>
         <p>Email: <a href="mailto:mostafa.alishahi@gmail.com">mostafa.alishahi@gmail.com</a></p>
         <p>Location: Augsburg, Germany</p>
+        <div class="social-icons">
+            <a href="https://www.linkedin.com/in/mostafa-sheikhalishahi-phd/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/mostafaalishahi" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+        </div>
     </section>
 
     <footer>
