--- a/index.html
+++ b/index.html
@@ -7,101 +7,6 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        /* Add some inline styles for enhanced presentation */
-        .skills-container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-        }
-        .skill-set {
-            flex: 1 1 calc(50% - 40px);
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            background: #f9f9f9;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-        .skill-set h3 {
-            margin-top: 0;
-            color: #333;
-        }
-        .skill {
-            margin-bottom: 20px;
-        }
-        .skill p {
-            margin: 5px 0;
-        }
-        .skills-container .skill-set:hover {
-            background-color: #e0f7fa;
-            border-color: #4db6ac;
-        }
-        header {
-            background: url('hero-background.jpg') no-repeat center center/cover;
-            color: #fff;
-            padding: 100px 20px;
-            text-align: center;
-        }
-        .hero h1 {
-            font-size: 3em;
-            margin: 0;
-        }
-        .hero p {
-            font-size: 1.5em;
-        }
-        nav {
-            background-color: #333;
-            color: #fff;
-        }
-        nav ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-        }
-        nav ul li {
-            margin: 0 15px;
-        }
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 1.2em;
-        }
-        .card {
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            margin-bottom: 20px;
-        }
-        .card h3 {
-            margin-top: 0;
-        }
-        .project {
-            margin-bottom: 20px;
-        }
-        .project h3 {
-            margin-top: 0;
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #333;
-            color: #fff;
-        }
-        .social-icons {
-            font-size: 1.5em;
-            margin: 10px 0;
-        }
-        .social-icons a {
-            color: #333;
-            margin: 0 10px;
-            text-decoration: none;
-        }
-        .social-icons a:hover {
-            color: #007bff;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -224,21 +129,18 @@
                 </div>
                 <div class="skill">
                     <h4><i class="fas fa-language"></i> Languages</h4>
-                    <p>English (Fluent), Persian (Native), Italian (Fluent), German (Beginner)</p>
+                    <p>Proficient in English, Persian, and Italian.</p>
                 </div>
             </div>
         </div>
     </section>
 
     <section id="contact">
-        <h2><i class="fas fa-envelope"></i> Contact</h2>
-        <p>For any inquiries, collaborations, or to discuss research opportunities, please feel free to reach out to me via email.</p>
+        <h2><i class="fas fa-envelope"></i> Contact Me</h2>
+        <p>Feel free to get in touch with me for collaborations, inquiries, or just to say hi!</p>
         <p>Email: <a href="mailto:mostafa.alishahi@gmail.com">mostafa.alishahi@gmail.com</a></p>
-        <p>Location: Augsburg, Germany</p>
-        <div class="social-icons">
-            <a href="https://www.linkedin.com/in/mostafa-sheikhalishahi-phd/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/mostafaalishahi" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-        </div>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/mostafasheikhalishahi" target="_blank">linkedin.com/in/mostafasheikhalishahi</a></p>
+        <p>GitHub: <a href="https://github.com/mostafaalishahi" target="_blank">github.com/mostafaalishahi</a></p>
     </section>
 
     <footer>
