--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <h2><i class="fas fa-envelope"></i> Contact Me</h2>
         <p>Feel free to get in touch with me for collaborations, inquiries, or just to say hi!</p>
         <p>Email: <a href="mailto:mostafa.alishahi@gmail.com">mostafa.alishahi@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/mostafasheikhalishahi" target="_blank">linkedin.com/in/mostafasheikhalishahi</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/mostafa-sheikhalishahi-phd/" target="_blank">https://www.linkedin.com/in/mostafa-sheikhalishahi-phd/</a></p>
         <p>GitHub: <a href="https://github.com/mostafaalishahi" target="_blank">github.com/mostafaalishahi</a></p>
     </section>
 
