--- a/index.html
+++ b/index.html
@@ -1,20 +1,84 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mostafa Sheikhalishahi - Data Scientist and AI Researcher</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        /* Add some inline styles for enhanced presentation */
+        .skills-container {
+	@@ -34,6 +36,71 @@
+            background-color: #e0f7fa;
+            border-color: #4db6ac;
+        }
+        header {
+            background: url('hero-background.jpg') no-repeat center center/cover;
+            color: #fff;
+            padding: 100px 20px;
+            text-align: center;
+        }
+        .hero h1 {
+            font-size: 3em;
+            margin: 0;
+        }
+        .hero p {
+            font-size: 1.5em;
+        }
+        nav {
+            background-color: #333;
+            color: #fff;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+        }
+        nav ul li {
+            margin: 0 15px;
+        }
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 1.2em;
+        }
+        .card {
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
+        .card h3 {
+            margin-top: 0;
+        }
+        .project {
+            margin-bottom: 20px;
+        }
+        .project h3 {
+            margin-top: 0;
+        }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #333;
+            color: #fff;
+        }
+        .social-icons {
+            font-size: 1.5em;
+            margin: 10px 0;
+        }
+        .social-icons a {
+            color: #333;
+            margin: 0 10px;
+            text-decoration: none;
+        }
+        .social-icons a:hover {
+            color: #007bff;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <div class="hero">
-            <h1>Mostafa Sheikhalishahi</h1>
-            <p>Data Scientist and AI Researcher</p>
-        </div>
-    </header>
+	@@ -46,22 +113,22 @@ <h1> Mostafa Sheikhalishahi</h1>
 
     <nav>
         <ul>
@@ -37,28 +101,7 @@
         <div class="card">
             <h3>Post-Doc Researcher</h3>
             <p><strong>Institute for Digital Medicine (IDM), Augsburg University Hospital</strong></p>
-            <p><strong>12/2021 - Present</strong> | Augsburg, Germany</p>
-            <p>At IDM, I work on the SAFICU project, which aims to revolutionize patient care in Intensive Care Units (ICUs) by applying federated learning techniques. This project involves developing AI models that can work across multiple institutions while preserving patient privacy. My role includes conducting advanced research on federated learning and explainable AI, mentoring students, and contributing to high-impact publications and international conferences.</p>
-            <p>Key responsibilities include:</p>
-            <ul>
-                <li>Designing and implementing federated learning frameworks for real-time ICU monitoring.</li>
-                <li>Developing models that balance interpretability and accuracy to assist healthcare professionals.</li>
-                <li>Overseeing the research progress of M.Sc. and B.Sc. students, guiding them through their projects.</li>
-                <li>Publishing findings in leading journals and presenting at global conferences to share insights and advancements.</li>
-            </ul>
-        </div>
-        <div class="card">
-            <h3>Ph.D. Research Fellow</h3>
-            <p><strong>Digital Health and Wellbeing Unit, Fondazione Bruno Kessler (FBK)</strong></p>
-            <p><strong>11/2017 - 07/2021</strong> | Trento, Italy</p>
-            <p>During my tenure at FBK, I focused on harnessing machine learning to improve clinical outcomes through data-driven insights. My work involved analyzing electronic health records from ICUs to predict patient conditions and detect anomalies. I also developed algorithms for environmental monitoring in wastewater treatment, showcasing the versatility of machine learning techniques across different domains.</p>
-            <p>Key accomplishments include:</p>
-            <ul>
-                <li>Developing predictive models for ICU patient outcomes, enhancing decision-making and patient care.</li>
-                <li>Creating algorithms for detecting anomalies in wastewater treatment processes, contributing to environmental health.</li>
-                <li>Publishing influential papers in top-tier AI and healthcare journals and presenting research at prominent conferences.</li>
-            </ul>
-        </div>
+	@@ -90,7 +157,7 @@ <h3>Ph.D. Research Fellow</h3>
     </section>
 
     <section id="projects">
@@ -66,13 +109,7 @@
         <div class="project">
             <h3>Genetic Engineering Attribution Challenge</h3>
             <p>The objective of this challenge was to predict the laboratory of origin for plasmid DNA sequences. Our proposed model was ranked <strong>14th</strong> on the private leaderboard out of <strong>1211</strong> competitors.</p>
-            <p>For more details, visit our <a href="https://github.com/mostafaalishahi/Genetic_engineering_attribution_challenge_2020" target="_blank"><strong>GitHub repository</strong></a>.</p>
-        </div>
-        <div class="project">
-            <h3>Milan Critical Care Datathon</h3>
-            <p>The objective was to develop an algorithm to predict the need for blood gas analysis in critically ill patients in the ICU. Our team won <strong>First Prize</strong>, sponsored by Google, among <strong>10</strong> competing teams.</p>
-            <p>Learn more about the datathon from this <a href="https://magazine.fbk.eu/en/news/fbk-trentinosalute4-0-researchers-winners-of-milan-critical-care-unit-datathon-2019/" target="_blank"><strong>news article</strong></a>.</p>
-        </div>
+	@@ -104,70 +171,74 @@ <h3>Milan Critical Care Datathon</h3>
     </section>
 
     <section id="skills">
@@ -129,22 +166,21 @@
                 </div>
                 <div class="skill">
                     <h4><i class="fas fa-language"></i> Languages</h4>
-                    <p>Proficient in English, Persian, and Italian.</p>
+                    <p>English (Fluent), Persian (Native), Italian (Fluent), German (Beginner)</p>
                 </div>
             </div>
         </div>
     </section>
 
     <section id="contact">
-        <h2><i class="fas fa-envelope"></i> Contact Me</h2>
-        <p>Feel free to get in touch with me for collaborations, inquiries, or just to say hi!</p>
+        <h2><i class="fas fa-envelope"></i> Contact</h2>
+        <p>For any inquiries, collaborations, or to discuss research opportunities, please feel free to reach out to me via email.</p>
         <p>Email: <a href="mailto:mostafa.alishahi@gmail.com">mostafa.alishahi@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/mostafa-sheikhalishahi-phd/" target="_blank">https://www.linkedin.com/in/mostafa-sheikhalishahi-phd/</a></p>
-        <p>GitHub: <a href="https://github.com/mostafaalishahi" target="_blank">github.com/mostafaalishahi</a></p>
+        <p>Location: Augsburg, Germany</p>
+        <div class="social-icons">
+            <a href="https://www.linkedin.com/in/mostafa-sheikhalishahi-phd/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/mostafaalishahi" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+        </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 Mostafa Sheikhalishahi</p>
-    </footer>
-</body>
-</html>
